fix(card-details): prevent horizontal overflow with very wide tables in card description

--- a/src/stylesheets/github-markdown.css
+++ b/src/stylesheets/github-markdown.css
@@ -286,7 +286,7 @@ html[data-theme="light"] {
   border-spacing: 0;
   border-collapse: collapse;
   display: block;
-  width: max-content;
+  width: auto; /*%% Changed, original was: width: max-content;*/
   max-width: 100%;
   overflow: auto;
 }
@@ -805,7 +805,7 @@ html[data-theme="light"] {
   word-break: normal;
   background: transparent;
   border: 0;
-  white-space: break-spaces;/*white-space: pre;*/
+  white-space: break-spaces; /*%% Changed, original was: white-space: pre;*/
 }
 
 .markdown-body .highlight {
